// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toggleRefinement() Lifecycle render supports negative numeric off or on values 1`] = `
Object {
  "cssClasses": Object {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": Object {
    "count": 1,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": Object {
      "count": 2,
      "isRefined": true,
    },
    "onFacetValue": Object {
      "count": 1,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "labelText": "{{name}}",
    },
    "templatesConfig": undefined,
    "useCustomCompileOptions": Object {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render supports negative numeric off or on values 2`] = `
Object {
  "cssClasses": Object {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": Object {
    "count": 1,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": Object {
      "count": 2,
      "isRefined": true,
    },
    "onFacetValue": Object {
      "count": 1,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "labelText": "{{name}}",
    },
    "templatesConfig": undefined,
    "useCustomCompileOptions": Object {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render understands cssClasses 1`] = `
Object {
  "cssClasses": Object {
    "checkbox": "ais-ToggleRefinement-checkbox test-checkbox",
    "label": "ais-ToggleRefinement-label test-label",
    "labelText": "ais-ToggleRefinement-labelText test-labelText",
    "root": "ais-ToggleRefinement test",
  },
  "currentRefinement": Object {
    "count": 2,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": Object {
      "count": 3,
      "isRefined": false,
    },
    "onFacetValue": Object {
      "count": 2,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "labelText": "{{name}}",
    },
    "templatesConfig": undefined,
    "useCustomCompileOptions": Object {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render when refined 1`] = `
Object {
  "cssClasses": Object {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": Object {
    "count": 3,
    "isRefined": true,
    "name": "world!",
    "offFacetValue": Object {
      "count": 3,
      "isRefined": false,
    },
    "onFacetValue": Object {
      "count": 2,
      "isRefined": true,
    },
  },
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "labelText": "{{name}}",
    },
    "templatesConfig": undefined,
    "useCustomCompileOptions": Object {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render when refined 2`] = `
Object {
  "cssClasses": Object {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": Object {
    "count": 3,
    "isRefined": true,
    "name": "world!",
    "offFacetValue": Object {
      "count": 3,
      "isRefined": false,
    },
    "onFacetValue": Object {
      "count": 2,
      "isRefined": true,
    },
  },
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "labelText": "{{name}}",
    },
    "templatesConfig": undefined,
    "useCustomCompileOptions": Object {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render with facet values 1`] = `
Object {
  "cssClasses": Object {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": Object {
    "count": 2,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": Object {
      "count": 3,
      "isRefined": false,
    },
    "onFacetValue": Object {
      "count": 2,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "labelText": "{{name}}",
    },
    "templatesConfig": undefined,
    "useCustomCompileOptions": Object {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render with facet values 2`] = `
Object {
  "cssClasses": Object {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": Object {
    "count": 2,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": Object {
      "count": 3,
      "isRefined": false,
    },
    "onFacetValue": Object {
      "count": 2,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "labelText": "{{name}}",
    },
    "templatesConfig": undefined,
    "useCustomCompileOptions": Object {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render without facet values 1`] = `
Object {
  "cssClasses": Object {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": Object {
    "count": null,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": Object {
      "count": 0,
      "isRefined": false,
    },
    "onFacetValue": Object {
      "count": null,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "labelText": "{{name}}",
    },
    "templatesConfig": undefined,
    "useCustomCompileOptions": Object {
      "labelText": false,
    },
  },
}
`;

exports[`toggleRefinement() Lifecycle render without facet values 2`] = `
Object {
  "cssClasses": Object {
    "checkbox": "ais-ToggleRefinement-checkbox",
    "label": "ais-ToggleRefinement-label",
    "labelText": "ais-ToggleRefinement-labelText",
    "root": "ais-ToggleRefinement",
  },
  "currentRefinement": Object {
    "count": null,
    "isRefined": false,
    "name": "world!",
    "offFacetValue": Object {
      "count": 0,
      "isRefined": false,
    },
    "onFacetValue": Object {
      "count": null,
      "isRefined": false,
    },
  },
  "refine": [Function],
  "templateProps": Object {
    "templates": Object {
      "labelText": "{{name}}",
    },
    "templatesConfig": undefined,
    "useCustomCompileOptions": Object {
      "labelText": false,
    },
  },
}
`;
